# KIELAS_Armor_CNN_Train

./: .gitignore  README.md  README_old.md  config.yaml  export.py  pyproject.toml  train.py
src/: dataset.py  extract_bag_bin.py  model.py  process_cifra100.py  test_data_viz.py
