[project]
name = "rm-armor-cnn"
version = "0.1.0"
description = "RoboMaster 装甲板数字识别 CNN 训练框架"
readme = "README.md"
requires-python = ">=3.10, <3.11" 

authors = [
    { name = "Kielas", email = "c1470759@outlook.com" }
]

dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "opencv-python>=4.8.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "torch>=2.4.0",           # 提升最低版本以确保 CUDA 12 兼容性
    "torchvision>=0.19.0",    # 配合 torch 2.4
    "matplotlib>=3.8.0",
    "ipywidgets>=8.0.0",
    "ipykernel>=6.15.0",
    "tqdm>=4.66.1",
    "tensorboard>=2.15.0",
]

[project.optional-dependencies]
deploy = [
    "onnx>=1.16.0",
    "onnxscript>=0.1.0",
    "onnxsim>=0.4.33",
    "torchsummary>=1.5.1",
    "onnxruntime-gpu>=1.18.0", # 替换为 GPU 版本
]

dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
extra-index-url = ["https://download.pytorch.org/whl/cu124"]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true